# cryptography

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: add_targets.cmake  add_tests.cmake  build_system.cmake  checks.cmake  config.cmake  sources.cmake
deprecated/: Makefile.bkup  crypto.h  rc4.c  rc4.h
headers/: deploy_rc4.h
src/: deploy_rc4.c  keylogger.c  simple_rc4.c
tests/: test_rc4.c
